feat: supported tls, migrated to sqlx, added context based logging package
